# scipy_ode_solver

./: .gitignore  01_1st_order_ode.ipynb  02_2nd_order_ode.ipynb  03_2D_diff_equation_MOL.ipynb  04_1D_heat_equation_source_term.ipynb  05_vectorization.ipynb  06_events.ipynb  A2_2D_wave_damped_wave_equation_external_force.ipynb  README.md  pyproject.toml  scipy_demo.ipynb  solve_ivp_2nd_order_ode.ipynb
