[tool.poetry]
name = "scipy_ode_solver"
version = "0.1.0"
description = "Instructions how to use scipy ode solver"
authors = ["Altesmi <optikkasalo@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.21.4"
scipy = "^1.7.3"
matplotlib = "^3.5.0"
jupyter = "^1.0.0"
ipympl = "^0.8.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
